# plasmotrack

./: .clang-format  .gitignore  CITATION.cff  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  centos-conan-profile  conandata.yml  conanfile.py
python/simtools/: pyproject.toml  run.py  summarize.py  visualize.py
python/simtools/simtools/cli/: console.py
python/simtools/simtools/lib/: Detection.py  Network.py  Observation.py  Transmission.py  Utils.py
python/simtools/tests/: test_simtools.py
python/simtools/tests/lib/: conftest.py  test_detection.py  test_network.py  test_transmission.py  test_utils.py
python/simulations/: pyproject.toml  scripts.py  simulations.code-workspace
python/simulations/network/: network.py
python/simulations/simulations/: Node.py  TransmissionNetwork.py  parse_node_csv.py  run.py
python/simulations/tests/: test_simulations.py
src/: CMakeLists.txt  main.cpp
src/core/: AbstractNode.cpp  AbstractNode.h  CMakeLists.txt  Node.h  State.cpp  State.h  config.h  crtp.h  main.cpp  version.h
src/core/Likelihood/: AdderLikelihood.cpp  AdderLikelihood.h  Likelihood.cpp  Likelihood.h  PartialLikelihood.cpp  PartialLikelihood.h
src/core/Operators/: GibbsOperator.h  Operator.h  RWOperator.h
src/core/Parameters/: Alleles.h  Parameter.h  SimpleParameter.h
src/core/abstract/: crtp.h  detector.h
src/core/abstract/observables/: Cacheable.h  CacheablePassthrough.h  Checkpointable.h  CheckpointablePassthrough.h  MutablePassthrough.h  Observable.h  Uncacheable.h  UncacheablePassthrough.h
src/core/computation/: Accumulator.h  Computation.h  ConstrainedOrderDerivedParentSet.h  LogLikelihood.cpp  LogLikelihood.h  ObservationTimeDerivedOrdering.h  OrderDerivedParentSet.h  PartialLikelihood.cpp  PartialLikelihood.h
src/core/computation/Transformers/: LogTransformer.h  Transformer.h
src/core/computation/observation_process/: AlleleCounter.h  AlleleCounts.cpp  AlleleCounts.h  ObservationProcessLikelihood.h
src/core/computation/transformers/: LogTransformer.h  Tempered.h  Transformer.h
src/core/computation/transmission_process/: GraphDerivedParentSet.h  OrderDerivedParentSet.h  (+6 more)
src/core/containers/: AlleleFrequencyContainer.h  AllowedRelationships.h  Infection.h  Locus.cpp  Locus.h  ObservedInfection.h  ParentSet.h  TransmissionNetwork.h
src/core/datatypes/: AlleleFrequencies.h  AlleleFrequenciesVector.h  Alleles.h  AllelesBitVec.h  Data.h  Infection.h  Matrix.h  ProbabilityVector.h  Simplex.cpp  Simplex.h  SparseAlleleSet.cpp  SparseAlleleSet.h  TransitionMatrix.h
src/core/distributions/: DiscreteDistribution.cpp  DiscreteDistribution.h  ZTGeometric.h  ZTMultiplicativeBinomial.h  ZTPoisson.h
src/core/io/: parse_json.h  path_parsing.cpp  path_parsing.h  serialize.h  utils.cpp  utils.h
src/core/mcmc/: Chain.h
src/core/parameter/: Graph.h  Ordering.h  Parameter.h
src/core/parameters/: Ordering.h  Parameter.h  TransmissionNetwork.h
src/core/priors/: Prior.h
src/core/samplers/: AbstractSampler.h  ConstrainedContinuousRandomWalk.h  ConstrainedDiscreteRandomWalk.h  ConstrainedRandomWalkMH.h  ContinuousRandomWalk.h  DiscreteRandomWalk.h  DoubleConstrainedContinuousRandomWalk.h  OrderSampler.h  RandomWalkMH.h  RandomizedScheduler.h  SALTSampler.h  SamplerEnum.h  Scheduler.cpp  Scheduler.h
src/core/utils/: CombinationIndicesGenerator.cpp  CombinationIndicesGenerator.h  CombinationsWithRepetitionsGenerator.cpp  CombinationsWithRepetitionsGenerator.h  LogPQ.cpp  LogPQ.h  ProbAnyMissing.cpp  ProbAnyMissing.h  RandomSequence.h  forwarding_utils.h  numerics.h  partial_map.h  random_sequence.h  timers.h
src/impl/model/: ModelFive.cpp  ModelFive.h  ModelFour.cpp  ModelFour.h  ModelOne.cpp  ModelOne.h  ModelThree.cpp  ModelThree.h  ModelTwo.cpp  ModelTwo.h
src/impl/state/: ModelOneState.cpp  ModelOneState.h  ModelThreeState.cpp  ModelThreeState.h  ModelTwoState.cpp  ModelTwoState.h
src/model/: AdderLikelihood.h  CMakeLists.txt  NoSuperInfection.cpp  NullLikelihood.cpp  NullLikelihood.h  ObservationMechanism.h  OrderingLikelihood.h  TransmissionMechanism.h
src/model/observation_process/: AlleleCounter.h  AlleleCounts.cpp  AlleleCounts.h  ObservationProcessLikelihood.h  ObservationProcessLikelihoodv1.h  ObservationProcessLikelihoodv2.h
src/model/transmission_process/: GraphBasedTransmissionProcess.h  GraphDerivedParentSet.h  NetworkBasedTransmissionProcess.h  OrderBasedTransmissionProcess.h  OrderBasedTransmissionProcessV2.h  OrderBasedTransmissionProcessV3.h  OrderDerivedParentSet.h  TransmissionProcessLikelihood.h
src/old/: Edge.h  Graph.cpp  Graph.h  Model.cpp  Model.h  NoSuperInfection.cpp  NoSuperInfection.h  Node.h  ObservationMechanism.cpp  ObservationMechanism.h  TransmissionMechanism.cpp  TransmissionMechanism.h  TransmissionNetworkModel.cpp  TransmissionNetworkModel.h
src/transmission_network_model/: CMakeLists.txt  LikelihoodFunctionParameters.h  ModelParameter.cpp  ObservationMechanism.cpp  ObservationMechanismParameters.cpp  ObservationMechanismParameters.h  PartialLikelihood.h  TransmissionMechanism.h  TransmissionMechanismParameters.cpp  TransmissionMechanismParameters.h
src/transmission_network_model_old/: CMakeLists.txt  LikelihoodFunction.h  ModelParameter.h  ObservationMechanism.h  TransmissionMechanism.cpp  TransmissionNetworkModelConfig.h  TransmissionNetworkModelConfig.h.in  utils.h
test/: CMakeLists.txt  main.cpp
test/resources/JSON/: nodes.json
test/src/: partial_likelihood_tests.cpp  transmission_network_model_tests.cpp
test/src/core/: core_allele_tests.cpp  core_data_tests.cpp  core_likelihood_tests.cpp  core_parameter_tests.cpp
test/src/impl/: ModelFiveTest.cpp  ModelFourTest.cpp  ModelOneTest.cpp  ModelThreeTest.cpp  ModelTwoTest.cpp
test/src/model/: OrderDerivedParentSetTest.cpp
tools/cli/Model/: CMakeLists.txt  Model.cpp
tools/cli/ModelEight/: CMakeLists.txt  ModelEight.cpp
tools/cli/ModelFive/: CMakeLists.txt  ModelFive.cpp
tools/cli/ModelNine/: CMakeLists.txt  ModelNine.cpp
tools/gui/ModelEight/: Application.cpp  Application.h  CMakeLists.txt  ModelEight.cpp  main.cpp
(+217 files in other folders)
