[tool.poetry]
name = "simtools"
version = "0.1.0"
description = ""
authors = ["Maxwell Murphy <murphy2122@berkeley.edu>"]

[tool.poetry.dependencies]
python = ">=3.9, <3.11"
click = "^8.0.3"
numpy = "^1.21.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.28.0"
black = "^21.9b0"
coverage = {extras = ["toml"], version = "^6.0.2"}
pytest-cov = "^3.0.0"
isort = "^5.9.3"
mypy = "^0.910"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
netsim = "tools.cli.console:main"

[tool.coverage.paths]
source = ["simtools", "*/site-packages"]

[tool.coverage.run]
branch = true
source = ["simtools"]

[tool.coverage.report]
show_missing = true
