[tool.poetry]
name = "simulations"
version = "0.1.0"
description = ""
authors = ["Maxwell Murphy <murphy2122@berkeley.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.4"
matplotlib = "^3.3.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.19.0"
pylint = "^2.6.0"
black = "^20.8b1"
pre-commit = "^2.9.2"
flake8 = "^3.8.4"
mypy = "^0.790"
ipykernel = "^5.3.4"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"

[tool.poetry.scripts]
vscode = "scripts:vscode"

[build-system]
requires = ["poetry-core>=1.0.0a5"]
build-backend = "poetry.core.masonry.api"
